# doraemon

./: .env  .env.example  .gitignore  BRIDGE_ENVIRONMENT_SETUP_COMPLETE.md  CANISTER_ID_MANAGEMENT.md  CLEANED_PROJECT_SUMMARY.md  FILE_STRUCTURE_VERIFICATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  FUSION_SWAP_TEST_RESULTS.md  PHASE1_COMPLETE.md  README.md  REAL_DATA_INTEGRATION_SUMMARY.md  REAL_IMPLEMENTATION_VERIFICATION.md  SECURE_SETUP_README.md  SECURITY_IMPROVEMENTS_SUMMARY.md  SETUP.md  START_SCRIPT_README.md  env.example  hardhat.config.js  jest.config.js  package.json  setup-secrets.sh  start-dev.sh  start.md  start.sh  stop-dev.sh  stop.sh  tsconfig.json
1inch-mcp/: .env  .gitignore  README.md  chat-server.js  demo-test.js  env.example  http-server.js  jest.config.js  package-lock.json  package.json  postman-collection.json  test-mcp-simple.js  test-mcp.js  test-wallet.json  tsconfig.json
docs/: analysis.md  helper.md
eth-aptos/: .env  .gitignore  .npmrc  IMPLEMENTATION_SUMMARY.md  README.md  TEST_CHECKLIST.md  jest.config.js  package.json  pnpm-lock.yaml
eth-bnb/: README.md  debug-sdk.js
eth-icp/: .env  (+7 more)
eth-icp-bridge/: .env.example  BRIDGE_SETUP_COMPLETE.md  CLEANUP_SUMMARY.md  DUAL_NETWORK_SUMMARY.md  ERROR_FIXES_SUMMARY.md  FUSION_SWAP_TEST_RESULTS.md  FUSION_TEST_GUIDE.md  NETWORK_SETUP.md  PHASE1_COMPLETE.md  PHASE2_PLAN.md  README.md  STATUS_SUMMARY.md  SWAP_TEST_RESULTS.md  env-setup.md  env.example  package.json
eth-icp/fusion_swap_icp/src/fusion_swap_icp_backend/: Cargo.toml
eth-icp/fusion_swap_icp/src/fusion_swap_icp_backend/src/: lib.rs
(+289 files in other folders)
